chore(nginx): add timed logs and tls keepalive

--- a/ansible/roles/nginx/templates/site.conf.j2
+++ b/ansible/roles/nginx/templates/site.conf.j2
@@ -125,7 +125,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    access_log /var/log/nginx/growerhub.ru_ssl_access.log;
+    access_log /var/log/nginx/growerhub.ru_ssl_access.log timed;
     error_log  /var/log/nginx/growerhub.ru_ssl_error.log;
 }
 
